[package]
name = "rogue"
version = "0.1.0"
description = "A modmanager for thunderstore"
authors = ["Rogue"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
reqwest = { version = "0.12", features = ["json", "blocking"] }
zip = "0.6"
tokio = { version = "1", features = ["full"] }
tauri-plugin-shell = "2.3.5"
tauri-plugin-fs = "2.5.0"
tauri-plugin-http = "2.0.0"
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
